--- a/todo_app/android/app/build.gradle
+++ b/todo_app/android/app/build.gradle
@@ -37,9 +37,8 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.daviesesiro.password_manager"
-        minSdkVersion 16
+        applicationId "com.daviesesiro.todo_app"
+        minSdkVersion 23
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
